# verdant

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: ast.cpp.D3BA93DB90C62529.idx  ast.h.822C01149C777300.idx  ast_node.h.F1591608793F0025.idx  create_stmt.cpp.0F550C942A4AC73B.idx  create_stmt.h.51039911E0410208.idx  error.h.A75762115C8597F4.idx  main.cpp.0E84139A4C80BA27.idx  main.cpp.368874240848773E.idx  object.cpp.B828EC9D8DA15B10.idx  object.h.D5FFFB6512666F18.idx  object_database.cpp.B7175E9D716E0394.idx  object_database.h.AB74F2B593754241.idx  optional.cpp.3B94162ED3380D5A.idx  optional.cpp.A3896A346BB330DD.idx  optional.h.AC7EF9440594576A.idx  optional.h.CC98CFD13518309B.idx  parser.cpp.9CF97A5172E7A4BC.idx  parser.h.B76C194CC642F510.idx  scanner.cpp.587A48632A9C2A01.idx  scanner.cpp.7C0BE52D12AF0BFE.idx  scanner.h.0BC3FDD476D8645F.idx  scanner.h.17C1F5BE52A18227.idx  status.cpp.633F01AD42F897BD.idx  status.cpp.A2C60C17937F39C6.idx  status.h.18AF094BA42F26E3.idx  status.h.A74CFB12EB795E7C.idx  stmt.h.C83BD0B689A7BD0B.idx  token.cpp.FC963FCB37E7C64B.idx  token.h.B0ED5C64DB926565.idx  util.cpp.ADEB0EA3631D1BCD.idx  util.h.6431DF33C9003034.idx  visitor.h.0F19B85490262416.idx
include/: ast.h  ast.hpp  ast_node.h  ast_printer.h  ast_printer.hpp  btree.h  btree.hpp  cmd_interpreter.h  cmd_interpreter.hpp  column_info.h  column_info.hpp  compiler.h  context.h  context.hpp  create_stmt.h  create_stmt.hpp  data_type.h  database_node.h  database_node.hpp  field.h  field.hpp  file_operator.hpp  interpreter.h  object.h  object_database.h  optional.h  optional.hpp  parameters.h  parameters.hpp  parser.h  scanner.h  scanner.hpp  sql_interpreter.h  sql_interpreter.hpp  sql_parser.h  sql_parser.hpp  status.h  stmt.h  stmt.hpp  storage_interface.h  (+11 more)
src/: ast.cpp  ast_printer.cpp  cmd_interpreter.cpp  column_info.cpp  create_stmt.cpp  database_node.cpp  field.cpp  file_operator.cpp  interpreter.cpp  main.cpp  object.cpp  object_database.cpp  parameters.cpp  parser.cpp  scanner.cpp  sql_interpreter.cpp  sql_parser.cpp  status.cpp  table.cpp  table_node.cpp  token.cpp  util.cpp  verdant_object.cpp
template/: btree.cpp  optional.cpp
test/: btree_test.cpp
